--- a/SparcFeatures/app.scss
+++ b/SparcFeatures/app.scss
@@ -56,20 +56,21 @@
     --grey-800: #333333;
     --grey-900: #1A1A1A;
     --black: #000000;
-    --yellow-200: #FCF29E;
-    --yellow-300: #FEF07E;
-    --yellow-400: #FDF37A;
-    --yellow-500: #ECDD2A;
-    --blue-200: #80C3E4;
-    --blue-300: #6DC8F4;
-    --blue-400: #4288CD;
-    --blue-500: #227CD3;
-    --orange-200: #DBA57F;
-    --orange-300: #FF801E;
-    --orange-400: #E67976;
-    --orange-500: #E84141;
-    --green-200: #9EBF94;
-    --green-300: #86D170;
-    --green-400: #31726E;
-    --green-500: #0E7973;
+    --yellow-300: #FCF29E;
+    --yellow-500: #FEF07E;
+    --yellow-600: #FDF37A;
+    --yellow-700: #ECDD2A;
+    --blue-300: #80C3E4;
+    --blue-500: #6DC8F4;
+    --blue-600: #4288CD;
+    --blue-700: #227CD3;
+    --orange-200: #FFA158;
+    --orange-300: #DBA57F;
+    --orange-500: #FF801E;
+    --orange-600: #E67976;
+    --orange-700: #E84141;
+    --green-300: #9EBF94;
+    --green-500: #86D170;
+    --green-600: #31726E;
+    --green-700: #0E7973;
 }
