--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -2753,10 +2753,10 @@ body.ibis-translating {
   width: 100%;
   background: none;
   padding: 0;
-  border: 15px solid transparent;
+  border: 10px solid transparent;
   border-radius: 8px;
   border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
-  border-image-outset: 3px;
+  border-image-outset: 2px;
   color: var(--grey-900);
   font-family: "Love Ya Like A Sister" !important;
   font-weight: 400;
@@ -2768,6 +2768,94 @@ body.ibis-translating {
   background: var(--orange-500);
 }
 
+.kori-login {
+  display: flex;
+  gap: 12px;
+  position: absolute;
+  top: 0;
+  right: 24px;
+  animation: login_fadeIn 1000ms linear;
+}
+.kori-login .kori-buddy {
+  width: 88px;
+}
+.kori-login__container {
+  padding: 12px;
+  background: var(--white);
+  border-radius: 0 0 16px 16px;
+}
+.kori-login h5, .kori-login input, .kori-login label, .kori-login button {
+  font-family: "Love Ya Like A Sister" !important;
+  font-size: 14px;
+  color: var(--grey-900);
+}
+.kori-login__header {
+  margin-bottom: 12px;
+}
+.kori-login__input {
+  display: flex;
+  gap: 8px;
+  padding: 0;
+  background: var(--white);
+  border: 10px solid transparent;
+  border-image: url("../../kori/images/brush-effect.svg") 15 round;
+}
+.kori-login__input input {
+  padding: 0;
+  border: none;
+}
+.kori-login__input input placeholder {
+  color: var(--grey-500);
+}
+.kori-login__keep {
+  display: flex;
+  gap: 8px;
+  font-size: 14px;
+}
+.kori-login__keep input {
+  margin-top: 6px;
+  width: 14px;
+  height: 14px;
+  border: 4px solid transparent;
+  border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
+  border-radius: 2px;
+}
+.kori-login__keep input::before {
+  background: var(--grey-700);
+  box-shadow: var(--grey-700);
+}
+.kori-login__actions {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin-top: 12px;
+}
+.kori-login__actions button {
+  width: 100%;
+  padding: 0;
+  background: none;
+  border: 10px solid transparent;
+  border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
+}
+.kori-login__actions button.kori-login__btn {
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  margin: 0 auto;
+  background: var(--orange-500);
+  border-radius: 8px;
+  border-image-outset: 2px;
+}
+
+@keyframes login_fadeIn {
+  0% {
+    opacity: 0;
+    top: -211px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
 :root {
   --white: #FFFFFF;
   --grey-50: #F2F2F2;
