add style classes for kori borders and buttons

--- a/SparcFeatures/Kori/KoriLogin.razor
+++ b/SparcFeatures/Kori/KoriLogin.razor
@@ -13,8 +13,8 @@
             <label for="kori-login__keep">Keep me logged in</label>
         </div>
         <div class="kori-login__actions">
-            <button class="kori-login__btn">Login</button>
-            <button class="kori-login__cancel">Cancel</button>
+            <button class="kori-login__btn kori__btn-primary">Login</button>
+            <button class="kori-login__cancel kori__btn">Cancel</button>
         </div>
     </div>
 </div>
