--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -5,15 +5,15 @@
             <div class="kori-widget__header">
                 <h5>How can I help you?</h5>
                 <div>
-                    <button>Edit</button>
-                    <button>Review</button>
+                    <button class="kori__btn-text">Edit</button>
+                    <button class="kori__btn-text">Review</button>
                 </div>
             </div>
             <div class="kori-widget__options">
-                <button class="options__edit">Edit Content</button>
-                <button class="options__ab">A/B Testing</button>
-                <button class="options__publish">Publish</button>
-                <button class="options__search">Search</button>
+                <button class="options__edit kori__btn">Edit Content</button>
+                <button class="options__ab kori__btn">A/B Testing</button>
+                <button class="options__publish kori__btn">Publish</button>
+                <button class="options__search kori__btn">Search</button>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
     <div id="kori-edit" class="kori-edit">
         <div class="kori-edit__content">
             <div class="kori-edit__back">
-                <button id="kori-edit__back">&lt; Back to edit</button>
+                <button id="kori-edit__back" class="kori__btn-text">&lt; Back to edit</button>
             </div>
             <div class="kori-edit__header">
                 <h5>Edit your content.</h5>
@@ -39,10 +39,10 @@
                 <button><img src="kori/icons/Link.svg" /></button>
             </div>
             <div class="kori-edit__actions">
-                <button class="kori-edit__cancel">Cancel</button>
-                <button class="kori-edit__save">Save</button>
+                <button class="kori-edit__cancel kori__btn">Cancel</button>
+                <button class="kori-edit__save kori__btn-primary">Save</button>
             </div>
         </div>
     </div>
-
+     n
 </div>
