--- a/SparcFeatures/Kori/KoriLogin.scss
+++ b/SparcFeatures/Kori/KoriLogin.scss
@@ -32,7 +32,7 @@
         padding: 0;
         background: var(--white);
         border: 10px solid transparent;
-        border-image: url('kori/images/brush-effect.svg') 15 round;
+        border-image: url('kori/borders/black-16.svg') 15 round;
 
         input {
             padding: 0;
@@ -54,7 +54,7 @@
             width: 14px;
             height: 14px;
             border: 4px solid transparent;
-            border-image: url('kori/images/brush-effect__button.svg') 15 round;
+            border-image: url('kori/borders/black-8.svg') 15 round;
             border-radius: 2px;
 
             &::before {
@@ -75,7 +75,7 @@
             padding: 0;
             background: none;
             border: 10px solid transparent;
-            border-image: url('kori/images/brush-effect__button.svg') 15 round;
+            border-image: url('kori/borders/black-8.svg') 15 round;
 
             &.kori-login__btn {
                 width: calc(100% - 4px);
