--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -2076,9 +2076,6 @@ body.ibis-translating {
 }
 .kori-enabled.selected {
   background: white;
-  border: 15px solid transparent;
-  border-radius: 24px;
-  border-image: url("../../kori/images/brush-effect__content.svg") 15 round;
 }
 
 body.ibis-translating {
@@ -2621,9 +2618,6 @@ body.ibis-translating {
   width: 300px;
   padding: 12px;
   background: var(--white);
-  border: 15px solid transparent;
-  border-radius: 24px;
-  border-image: url("../../kori/images/brush-effect.svg") 15 round;
 }
 .kori-widget__actions .kori-widget__header {
   display: flex;
@@ -2634,50 +2628,35 @@ body.ibis-translating {
   display: flex;
   gap: 8px;
 }
-.kori-widget__actions .kori-widget__header button {
-  padding: 0;
-  background: none;
-  color: var(--grey-900);
-  border: none;
-  border-radius: 0px;
-  font-family: "Love Ya Like A Sister" !important;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  transition: 200ms ease-in-out;
-}
-.kori-widget__actions .kori-widget__header button:hover {
-  filter: opacity(0.6);
-}
-.kori-widget__actions .kori-widget__header button:active {
-  filter: opacity(1);
-}
 .kori-widget__actions .kori-widget__options {
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 8px;
 }
 .kori-widget__actions .kori-widget__options button {
   width: 100%;
-  padding: 6px;
-  background: none;
-  border: 10px solid transparent;
-  border-radius: 24px;
-  border-image: url("../../kori/images/brush-effect.svg") 15 round;
-  color: var(--grey-900);
-  font-family: "Love Ya Like A Sister" !important;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 100%;
-  text-align: left;
-  transition: 200ms ease-in-out;
-}
-.kori-widget__actions .kori-widget__options button:hover {
-  filter: opacity(0.6);
-}
-.kori-widget__actions .kori-widget__options button:active {
-  filter: opacity(1);
+  text-align: left !important;
+  /* padding: 6px;
+   background: none;
+   border: 10px solid transparent;
+   border-radius: 24px;
+   border-image: url('../../kori/borders/black-24.svg') 15 round;
+   color: var(--grey-900);
+   font-family: 'Love Ya Like A Sister' !important;
+   font-weight: 400;
+   font-style: normal;
+   font-size: 14px;
+   line-height: 100%;
+   text-align: left;
+   transition: 200ms ease-in-out;
+
+   &:hover {
+       filter: opacity(0.6);
+   }
+
+   &:active {
+       filter: opacity(1);
+   }*/
 }
 .kori-widget .kori-edit {
   display: none;
@@ -2688,28 +2667,12 @@ body.ibis-translating {
   right: -322px;
   transform: translatey(-50%);
   background: var(--white);
-  border: 15px solid transparent;
-  border-radius: 24px;
-  border-image: url("../../kori/images/brush-effect.svg") 15 round;
   text-align: left;
 }
 .kori-widget .kori-edit__back {
   margin-bottom: 11px;
   font-size: 14px;
   line-height: 0;
-}
-.kori-widget .kori-edit__back button {
-  background: none;
-  padding: 0;
-  border: none;
-  border-radius: 0;
-  color: var(--grey-900);
-  font-family: "Love Ya Like A Sister" !important;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 100%;
-  text-align: left;
 }
 .kori-widget .kori-edit__options {
   display: flex;
@@ -2751,21 +2714,80 @@ body.ibis-translating {
 }
 .kori-widget .kori-edit__actions button {
   width: 100%;
-  background: none;
-  padding: 0;
-  border: 10px solid transparent;
-  border-radius: 8px;
-  border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
-  border-image-outset: 2px;
-  color: var(--grey-900);
-  font-family: "Love Ya Like A Sister" !important;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 100%;
 }
-.kori-widget .kori-edit__actions button.kori-edit__save {
-  background: var(--orange-500);
+
+.kori__btn, .kori__btn-primary {
+  padding: 0 !important;
+  background: none !important;
+  border-image-outset: 2px !important;
+  color: var(--grey-900) !important;
+  font-family: "Love Ya Like a Sister" !important;
+  font-size: 14px !important;
+  line-height: 100% !important;
+  text-align: center !important;
+  transition: 200ms ease-in-out !important;
+}
+.kori__btn:hover, .kori__btn-primary:hover {
+  filter: opacity(0.6) !important;
+}
+.kori__btn:active, .kori__btn-primary:active {
+  filter: opacity(1) !important;
+}
+
+.kori__btn-primary {
+  background: var(--orange-500) !important;
+}
+.kori__btn-primary:hover {
+  background: var(--orange-200) !important;
+  filter: opacity(1) !important;
+}
+.kori__btn-primary:active {
+  background: var(--orange-500) !important;
+}
+
+.kori__btn-text {
+  background: none !important;
+  border: none !important;
+  padding: 0 !important;
+  color: var(--grey-900) !important;
+  font-family: "Love Ya Like a Sister" !important;
+  font-size: 14px !important;
+  line-height: 100% !important;
+  transition: 200ms ease-in-out !important;
+}
+.kori__btn-text:hover {
+  opacity: 0.6 !important;
+}
+.kori__btn-text:active {
+  opacity: 1 !important;
+}
+
+.kori__border_black-10-8, .kori__btn, .kori__btn-primary {
+  border: 10px solid transparent;
+  border-image: url("../../kori/borders/black-8.svg") 15 round;
+  border-image-outset: 2px;
+  border-radius: 8px;
+}
+
+.kori__border_black-10-16 {
+  border: 10px solid transparent;
+  border-image: url("../../kori/borders/black-16.svg") 15 round;
+  border-image-outset: 2px;
+  border-radius: 16px;
+}
+
+.kori__border-black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget .kori-edit {
+  border: 15px solid transparent;
+  border-image: url("../../kori/borders/black-16.svg") 15 round;
+  border-image-outset: 4px;
+  border-radius: 16px;
+}
+
+.kori__border_orange-15-16, .kori-enabled.selected {
+  border: 15px solid transparent;
+  border-image: url("../../kori/borders/orange-16.svg") 15 round;
+  border-image-outset: 4px;
+  border-radius: 16px;
 }
 
 .kori-login {
@@ -2798,7 +2820,7 @@ body.ibis-translating {
   padding: 0;
   background: var(--white);
   border: 10px solid transparent;
-  border-image: url("../../kori/images/brush-effect.svg") 15 round;
+  border-image: url("../../kori/borders/black-16.svg") 15 round;
 }
 .kori-login__input input {
   padding: 0;
@@ -2817,7 +2839,7 @@ body.ibis-translating {
   width: 14px;
   height: 14px;
   border: 4px solid transparent;
-  border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
+  border-image: url("../../kori/borders/black-8.svg") 15 round;
   border-radius: 2px;
 }
 .kori-login__keep input::before {
@@ -2835,7 +2857,7 @@ body.ibis-translating {
   padding: 0;
   background: none;
   border: 10px solid transparent;
-  border-image: url("../../kori/images/brush-effect__button.svg") 15 round;
+  border-image: url("../../kori/borders/black-8.svg") 15 round;
 }
 .kori-login__actions button.kori-login__btn {
   width: calc(100% - 4px);
