--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -1,4 +1,5 @@
-﻿<div id="kori-widget" class="kori-widget">
+﻿<div id="kori-widget" class="kori-widget" onmousedown="startDrag(event)">
+@* <div id="kori-widget" class="kori-widget" draggable="true" ondragstart="dragStart(event)" ondrag="dragging(event)" ondragend="dragEnd(event)"> *@
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
         <img class="kori-buddy" src="kori/images/kori-buddy.svg" />
         <div class="kori-widget__content">
